# camelram_beta

./: dune-project
_build/: .db  .digest-db  log
_build/default/: camelries.dune-package  camelries.install
_build/default/lib/: camelries.cma  camelries.cmxa  camelries.cmxs
_build/default/lib/.camelries.objs/byte/: camelries.cmi  camelries.cmo  camelries.cmt
_build/default/lib/.camelries.objs/native/: camelries.cmx
_build/default/lib/.merlin-conf/: lib-camelries
_build/default/test/.camelries.eobjs/byte/: dune__exe__Camelries.cmi  dune__exe__Camelries.cmti
_build/default/test/.camelries.eobjs/native/: dune__exe__Camelries.cmx
_build/default/test/.merlin-conf/: exe-camelries
_build/install/default/lib/camelries/: META  dune-package  opam
lib/: dune
test/: dune
